# backend

./: .firebaserc  .gitignore  README.md  analise.ipynb  main.py  pyproject.toml  tabela_bruta.xlsx  tabela_tratada.xlsx  teste_ia.py
functions/: .gitignore  main.py  requirements.txt
functions/src/: main.py  utils.py
scripts/: teste_ia.py
src/: utils.py
