[tool.poetry]
name = "ye-backend"
version = "0.1.0"
description = ""
authors = ["Luis Guilherme de Souza Munhoz <luisguilherme.sm@hotmail.com>"]
readme = "README.md"

[tool.poetry.dependencies]
python = "^3.10"
fastapi = "^0.111.0"
pandas = "^2.2.2"
pdfquery = "^0.4.3"
uvicorn = "^0.29.0"
lxml = "^5.2.1"
pymupdf = "^1.24.4"
xlsxwriter = "^3.2.0"


[tool.poetry.group.dev.dependencies]
flake8 = "^7.0.0"
mypy = "^1.10.0"
flake8-pyproject = "^1.2.3"
black = "^24.4.2"
isort = "^5.13.2"
ipykernel = "^6.29.4"
memory-profiler = "^0.61.0"
[tool.flake8]
max-line-length = 88
extend-ignore = ["E203", "W503"]

[tool.black]
line-length = 88

[tool.isort]
line-length = 88
profile = "black"
multi-line = 3  

[tool.mypy]
python_version = "3.10"
ignore_missing_imports = true
disallow_untyped_defs = true
disallow_untyped_calls = true
disallow_incomplete_defs = true
check_untyped_defs = true
warn_unused_ignores = true
warn_redundant_casts = true
warn_unused_configs = true
warn_return_any = true
warn_unreachable = true
strict_optional = true
show_error_codes = true
show_column_numbers = true
pretty = true
no_implicit_optional = true
no_implicit_reexport = true
files= ["."]


[build-system]
requires = ["poetry-core"]
build-backend = "poetry.core.masonry.api"
