[tool.poetry]
name = "ye-backend"
version = "0.1.0"
description = ""
authors = ["Luis Guilherme de Souza Munhoz <luisguilherme.sm@hotmail.com>"]
readme = "README.md"

[tool.poetry.dependencies]
python = "^3.10"
pandas = "^2.2.2"
pymupdf = "^1.24.4"
firebase-functions = "0.4.0"


[tool.poetry.group.dev.dependencies]
mypy = "^1.10.0"
ipykernel = "^6.29.4"
memory-profiler = "^0.61.0"
poetry-plugin-export = "^1.8.0"
ruff = "^0.6.1"
mypy-extensions = "^1.0.0"

[tool.mypy]
python_version = "3.10"
ignore_missing_imports = true
disallow_untyped_defs = true
disallow_untyped_calls = true
disallow_incomplete_defs = true
check_untyped_defs = true
warn_unused_ignores = true
warn_redundant_casts = true
warn_unused_configs = true
warn_return_any = true
warn_unreachable = true
strict_optional = true
show_error_codes = true
show_column_numbers = true
pretty = true
no_implicit_optional = true
no_implicit_reexport = true
files= ["."]

[tool.ruff]
exclude = ["/*venv", "*/__pycache__", "*/.mypy_cache", "*/.pytest_cache", "*/.git", "*/.vscode"]
line-length = 88
indent-width = 4
target-version = "py312"
[tool.ruff.lint]
select = ["E", "F", "I", "W", "B", "SIM", "UP"]
fixable = ["ALL"]
unfixable = []
dummy-variable-rgx = "^_"

[tool.ruff.lint.mccabe]
max-complexity = 15

[tool.ruff.format]
quote-style = "double"
indent-style = "space"
skip-magic-trailing-comma = false
line-ending = "auto"
docstring-code-format = true
docstring-code-line-length = "dynamic"


[build-system]
requires = ["poetry-core"]
build-backend = "poetry.core.masonry.api"
